--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Methods for Adding CSS</title>
-  </head>
-  <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Methods for Adding CSS</title>
+  <style>
+    button{
+      margin-top: 10px;
+      background-color: rgb(244, 174, 43);
+      border-color: gainsboro ;
+      padding: 7px 15px;
+      font-size: 15px;
+
+    }
+  </style>
+</head>
+
+<body>
+  <div class="head">
+    <h1>Style me via the external method!</h1>
+  </div>
+  <div style="background-color: green; height: 25px;">
+    <p style="color: white; padding-top: 2px; ">I would like to be styled with the internal method, please.</p>
+  </div>
+  <button > <strong>Inline Method</strong> </button>
+</body>
+
 </html>
